# DE-Ride-Booking

./: README.md  connection.py  data.py  file_names.json  main.py  pyproject.toml
data/: bulk_rides.json  map_cancellation_reasons.json  map_cities.json  map_paymenth_methods.json  map_ride_status.json  map_vehicle_makes.json  map_vehicle_types.json
templates/: home.html
