[project]
name = "de-ride-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-core>=1.40.0",
    "azure-eventhub>=5.15.1",
    "faker>=40.15.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "starlette>=1.0.0",
    "uvicorn>=0.46.0",
]
